fix menu mobile overflow

--- a/wp-content/themes/publiframework/assets/src/scss/layout/_header.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/layout/_header.scss
@@ -251,6 +251,7 @@
 
         .navbar-collapse {
             padding: 1rem 0 2rem;
+            height: calc(100svh - 7.9rem);
 
             .navbar-nav {
                 width: 100%;
